style: Fix more Sonar issues (#1116)